Prop_search fails to set objects from scene #59574

Closed
opened 2018-12-18 15:57:03 +01:00 by Diego Gangl · 4 comments

System Information
Operating system: Linux 4.19 / Fedora 29
Graphics card: Vega rx 56 (AMDGPU)

Blender Version
Broken:Beta (26d5a3625e) and master (e62368e6c4)
Worked: 2.79c

Short description of error

prop_seach() fails to set the selected object. This only happens with objects when trying to grab them from scene.objects. It doesn't happen when looking for them in bpy.data or when looking for worlds, view layers, etc.

Exact steps for others to reproduce the error

prop_search_bug.blend

  1. Open the attached Blend file
  2. Run the script
  3. Try the different prop searches in the Demo panel
**System Information** Operating system: Linux 4.19 / Fedora 29 Graphics card: Vega rx 56 (AMDGPU) **Blender Version** Broken:Beta (26d5a3625ed) and master (e62368e6c43) Worked: 2.79c **Short description of error** `prop_seach()` fails to set the selected object. This only happens with objects when trying to grab them from `scene.objects`. It doesn't happen when looking for them in `bpy.data` or when looking for worlds, view layers, etc. **Exact steps for others to reproduce the error** [prop_search_bug.blend](https://archive.blender.org/developer/F5993634/prop_search_bug.blend) 1. Open the attached Blend file 2. Run the script 3. Try the different prop searches in the Demo panel
Author

Added subscriber: @Januz

Added subscriber: @Januz
Member

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by d9ac4653e7

This issue was referenced by d9ac4653e70cace968d5a2d3acca894e4168b056

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59574
No description provided.